[gd_scene load_steps=6 format=2]

[ext_resource path="res://scene/Battle/PropertyPanel.gd" type="Script" id=1]
[ext_resource path="res://font/NotoSansHans-Medium.otf" type="DynamicFontData" id=2]
[ext_resource path="res://font/font_uiState.tres" type="DynamicFont" id=3]
[ext_resource path="res://scene/Battle/misc/BuffView.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]

size = 23
font_data = ExtResource( 2 )

[node name="PropertyPanel" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_top = -1.0
margin_right = 203.0
margin_bottom = 362.0

[node name="mingziLabel" type="Label" parent="Panel"]
margin_left = 51.0
margin_top = 11.0
margin_right = 143.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 1 )
text = "勇者队伍"

[node name="Label2" type="Label" parent="Panel"]
margin_left = 21.0
margin_top = 49.0
margin_right = 62.0
margin_bottom = 68.0
custom_fonts/font = ExtResource( 3 )
text = "攻击:"

[node name="atkLabel" type="Label" parent="Panel"]
margin_left = 117.0
margin_top = 48.0
margin_right = 244.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 3 )
text = "100"

[node name="defLabel" type="Label" parent="Panel"]
margin_left = 118.0
margin_top = 78.0
margin_right = 249.0
margin_bottom = 97.0
custom_fonts/font = ExtResource( 3 )
text = "100"

[node name="speedLabel" type="Label" parent="Panel"]
margin_left = 119.0
margin_top = 106.0
margin_right = 250.0
margin_bottom = 125.0
custom_fonts/font = ExtResource( 3 )
text = "100"

[node name="critRateLabel" type="Label" parent="Panel"]
margin_left = 119.0
margin_top = 133.0
margin_right = 253.0
margin_bottom = 152.0
custom_fonts/font = ExtResource( 3 )
text = "100"

[node name="critPowerLabel" type="Label" parent="Panel"]
margin_left = 121.0
margin_top = 163.0
margin_right = 241.0
margin_bottom = 182.0
custom_fonts/font = ExtResource( 3 )
text = "100"

[node name="Label3" type="Label" parent="Panel"]
margin_left = 23.0
margin_top = 77.0
margin_right = 64.0
margin_bottom = 96.0
custom_fonts/font = ExtResource( 3 )
text = "防御:"

[node name="Label4" type="Label" parent="Panel"]
margin_left = 23.0
margin_top = 104.0
margin_right = 77.0
margin_bottom = 123.0
custom_fonts/font = ExtResource( 3 )
text = "速度："

[node name="Label5" type="Label" parent="Panel"]
margin_left = 22.0
margin_top = 134.0
margin_right = 81.0
margin_bottom = 153.0
custom_fonts/font = ExtResource( 3 )
text = "暴击率:"

[node name="Label6" type="Label" parent="Panel"]
margin_left = 22.0
margin_top = 162.0
margin_right = 99.0
margin_bottom = 181.0
custom_fonts/font = ExtResource( 3 )
text = "暴击倍率:"

[node name="Label7" type="Label" parent="Panel"]
margin_left = 18.0
margin_top = 190.0
margin_right = 191.0
margin_bottom = 209.0
custom_fonts/font = ExtResource( 3 )
text = "---------状态----------"
align = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
margin_left = 14.0
margin_top = 216.0
margin_right = 197.0
margin_bottom = 359.0

[node name="buffPlace" type="VBoxContainer" parent="Panel/ScrollContainer"]
editor/display_folded = true
margin_right = 164.0
margin_bottom = 44.0

[node name="BuffView" parent="Panel/ScrollContainer/buffPlace" instance=ExtResource( 4 )]
margin_bottom = 20.0

[node name="BuffView2" parent="Panel/ScrollContainer/buffPlace" instance=ExtResource( 4 )]
margin_top = 24.0
margin_bottom = 44.0

[node name="Panel2" type="Panel" parent="."]
visible = false
margin_left = 31.0
margin_top = 272.0
margin_right = 236.0
margin_bottom = 406.0

[node name="Label" type="Label" parent="Panel2"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "这是一个buff
这是一个buff 这是一个buff 这是一个buff "
autowrap = true

